fix plugin data

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-plugin-eleventy",
+  "name": "@hamworks/vite-plugin-eleventy",
   "version": "0.3.1",
   "description": "A Vite plugin to build your site with 11ty",
   "main": "index.js",
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Snugug/vite-plugin-eleventy.git"
+    "url": "git+https://github.com/hamworks/vite-plugin-eleventy"
   },
   "keywords": [
     "vite-plugin",
@@ -24,9 +24,9 @@
   "author": "Sam Richard",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/Snugug/vite-plugin-eleventy/issues"
+    "url": "https://github.com/hamworks/vite-plugin-eleventy/issues"
   },
-  "homepage": "https://github.com/Snugug/vite-plugin-eleventy#readme",
+  "homepage": "https://github.com/hamworks/vite-plugin-eleventy#readme",
   "dependencies": {
     "@11ty/eleventy": "^1.0",
     "chalk": "^4.1.1"
