--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hamworks/vite-plugin-eleventy",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "A Vite plugin to build your site with 11ty",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hamworks/vite-plugin-eleventy"
+    "url": "git+https://github.com/hamworks/vite-plugin-eleventy.git"
   },
   "keywords": [
     "vite-plugin",
